# KeySaver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_rus.md  build.sh  build_externals.sh  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  build_host_protobuf.sh  configuration.proto  crypto_provider.cpp  crypto_provider.hpp  db_manager.cpp  db_manager.hpp  engine.cpp  engine.hpp  implementation.cpp  implementation.hpp  interface_android.cpp  interface_common.cpp  native-lib.cpp  password_generator.cpp  password_generator.hpp
app/src/main/cpp/include/keysaver/: interface.h  interface_android.h  interface_linux.h  interface_windows.h
app/src/main/cpp/keysaver/: interface.h  interface_android.h
app/src/main/java/: Implementation.kt
app/src/main/java/com/science/keysaver/: AddConfiguration.kt  AddService.kt  MainActivity.kt  SetupService.kt
app/src/main/res/: keysaver_logo_source.xcf
app/src/main/res/drawable/: button_background.xml  switch_thumb.xml  switch_track.xml  text_field_background.xml
app/src/main/res/layout/: add_configuration.xml  add_service.xml  enter_master_key.xml  get_password.xml  setup_service.xml
app/src/main/res/mipmap-anydpi-v26/: ic_keysaver_logo_round.xml  ic_neyro_keysaver_logo.xml
app/src/main/res/values/: colors.xml  ic_keysaver_logo_background.xml  ic_neyro_keysaver_logo_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
desktop/: CMakeLists.txt  Main.qml  application.cpp  application.hpp  controller.cpp  controller.hpp  main.cpp
desktop/UI/: AddConfiguration.qml  AddService.qml  App.qml  EnterMasterPassword.qml  GetPassword.qml  HelpButton.qml  ImageButton.qml  SetupService.qml  StyledButton.qml  StyledComboBox.qml  StyledInput.qml  StyledLabel.qml  StyledSwitch.qml  app_icon.rc  resources.qrc
desktop/UI/components/: HelpButton.qml  StyledButton.qml  StyledInput.qml  StyledSwitch.qml
desktop/UI/layouts/: AddConfiguration.qml  AddService.qml  EnterMasterPassword.qml  GetPassword.qml  SetupService.qml
desktop/UI/translations/: en_US.ts  ru_RU.ts
desktop/install/: install.iss
desktop/install/keysaver_ubuntu_24_04_x64/DEBIAN/: control  postinst  postrm
desktop/install/keysaver_ubuntu_24_04_x64/usr/share/applications/: keysaver.desktop
desktop/install/license/: LICENSE
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tests/: CMakeLists.txt
tests/core_unit_tests/: CMakeLists.txt
tests/functional_tests/: .gitignore  KeysaverCallFunctionsTest.py  KeysaverConfigurationsFunctionalTests.py  KeysaverFunctionalTests.py  KeysaverGeneratePasswordFunctionalTests.py  KeysaverInterface.py  KeysaverServicesFunctionalTests.py
tests/functional_tests/storage/: database_backup  database_test_services
